build-files/pling/2.0.1/README.md
# Pling container

Main tool: [pling](https://pling.readthedocs.io/latest/)
  
Code repository: https://github.com/iqbal-lab-org/pling

<details>
<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda"

  Name                       Version      Build                 Channel    
─────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex              0.1          conda_forge           conda-forge
  _openmp_mutex              4.5          2_gnu                 conda-forge
  aioeasywebdav              2.4.0        pyha770c72_0          conda-forge
  aiohappyeyeballs           2.6.1        pyhd8ed1ab_0          conda-forge
  aiohttp                    3.12.13      py311h2dc5d0c_0       conda-forge
  aiosignal                  1.3.2        pyhd8ed1ab_0          conda-forge
  amply                      0.1.6        pyhd8ed1ab_1          conda-forge
  annotated-types            0.7.0        pyhd8ed1ab_1          conda-forge
  appdirs                    1.4.4        pyhd8ed1ab_1          conda-forge
  attrs                      25.3.0       pyh71513ae_0          conda-forge
  bcrypt                     4.3.0        py311hdae7d1d_1       conda-forge
  bitarray                   3.4.2        py311h9ecbd09_0       conda-forge
  bitstring                  4.3.1        pyhd8ed1ab_0          conda-forge
  boto3                      1.38.46      pyhd8ed1ab_0          conda-forge
  botocore                   1.38.46      pyge310_1234567_0     conda-forge
  brotli                     1.1.0        hb9d3cd8_3            conda-forge
  brotli-bin                 1.1.0        hb9d3cd8_3            conda-forge
  brotli-python              1.1.0        py311hfdbb021_3       conda-forge
  bzip2                      1.0.8        h4bc722e_7            conda-forge
  c-ares                     1.34.5       hb9d3cd8_0            conda-forge
  ca-certificates            2025.6.15    hbd8a1cb_0            conda-forge
  cachetools                 5.5.2        pyhd8ed1ab_0          conda-forge
  certifi                    2025.6.15    pyhd8ed1ab_0          conda-forge
  cffi                       1.17.1       py311hf29c0ef_0       conda-forge
  charset-normalizer         3.4.2        pyhd8ed1ab_0          conda-forge
  click                      8.2.1        pyh707e725_0          conda-forge
  coin-or-cbc                2.10.12      h00e76a6_2            conda-forge
  coin-or-cgl                0.60.9       h82e2f02_4            conda-forge
  coin-or-clp                1.17.10      h8a7a1e7_1            conda-forge
  coin-or-osi                0.108.11     h96cc833_4            conda-forge
  coin-or-utils              2.11.12      h3a12e53_2            conda-forge
  coincbc                    2.10.12      2_metapackage         conda-forge
  colorama                   0.4.6        pyhd8ed1ab_1          conda-forge
  coloredlogs                15.0.1       pyhd8ed1ab_4          conda-forge
  configargparse             1.7.1        pyhe01879c_0          conda-forge
  connection_pool            0.0.3        pyhd3deb0d_0          conda-forge
  contourpy                  1.3.2        py311hd18a35c_0       conda-forge
  cryptography               45.0.4       py311hafd3f86_0       conda-forge
  cycler                     0.12.1       pyhd8ed1ab_1          conda-forge
  datrie                     0.8.2        py311h9ecbd09_8       conda-forge
  defusedxml                 0.7.1        pyhd8ed1ab_0          conda-forge
  deprecation                2.1.0        pyh9f0ad1d_0          conda-forge
  dingii                     0.0.1        pyhdfd78af_0          bioconda   
  docutils                   0.21.2       pyhd8ed1ab_1          conda-forge
  dpath                      2.2.0        pyha770c72_0          conda-forge
  dropbox                    12.0.2       pyhd8ed1ab_1          conda-forge
  eido                       0.2.4        pyhd8ed1ab_0          conda-forge
  exceptiongroup             1.3.0        pyhd8ed1ab_0          conda-forge
  filechunkio                1.8          py_2                  conda-forge
  fonttools                  4.58.4       py311h2dc5d0c_0       conda-forge
  freetype                   2.13.3       ha770c72_1            conda-forge
  frozenlist                 1.6.0        py311h62d540b_0       conda-forge
  ftputil                    5.1.0        pyhd8ed1ab_0          conda-forge
  gitdb                      4.0.12       pyhd8ed1ab_0          conda-forge
  gitpython                  3.1.44       pyhff2d567_0          conda-forge
  glpk                       5.0          h445213a_0            conda-forge
  gmp                        6.3.0        hac33072_2            conda-forge
  google-api-core            2.25.1       pyhd8ed1ab_0          conda-forge
  google-api-python-client   2.174.0      pyhff2d567_0          conda-forge
  google-auth                2.40.3       pyhd8ed1ab_0          conda-forge
  google-auth-httplib2       0.2.0        pyhd8ed1ab_1          conda-forge
  google-cloud-core          2.4.3        pyhd8ed1ab_0          conda-forge
  google-cloud-storage       3.1.1        pyhd8ed1ab_0          conda-forge
  google-crc32c              1.7.1        py311h0973507_0       conda-forge
  google-resumable-media     2.7.2        pyhd8ed1ab_2          conda-forge
  googleapis-common-protos   1.70.0       pyhd8ed1ab_0          conda-forge
  grpcio                     1.71.0       py311h8825b61_1       conda-forge
  h2                         4.2.0        pyhd8ed1ab_0          conda-forge
  hpack                      4.1.0        pyhd8ed1ab_0          conda-forge
  httplib2                   0.22.0       pyhd8ed1ab_1          conda-forge
  humanfriendly              10.0         pyh707e725_8          conda-forge
  hyperframe                 6.1.0        pyhd8ed1ab_0          conda-forge
  idna                       3.10         pyhd8ed1ab_1          conda-forge
  importlib-metadata         8.7.0        pyhe01879c_1          conda-forge
  importlib_resources        6.5.2        pyhd8ed1ab_0          conda-forge
  iniconfig                  2.0.0        pyhd8ed1ab_1          conda-forge
  intervaltree               3.1.0        pyhd8ed1ab_1          conda-forge
  jinja2                     3.1.6        pyhd8ed1ab_0          conda-forge
  jmespath                   1.0.1        pyhd8ed1ab_1          conda-forge
  jsonschema                 4.24.0       pyhd8ed1ab_0          conda-forge
  jsonschema-specifications  2025.4.1     pyh29332c3_0          conda-forge
  jupyter_core               5.8.1        pyh31011fe_0          conda-forge
  kiwisolver                 1.4.7        py311hd18a35c_0       conda-forge
  lcms2                      2.17         h717163a_0            conda-forge
  ld_impl_linux-64           2.43         h1423503_5            conda-forge
  lerc                       4.0.0        h0aef613_1            conda-forge
  libabseil                  20250127.1   cxx17_hbbce691_0      conda-forge
  libblas                    3.9.0        32_h59b9bed_openblas  conda-forge
  libbrotlicommon            1.1.0        hb9d3cd8_3            conda-forge
  libbrotlidec               1.1.0        hb9d3cd8_3            conda-forge
  libbrotlienc               1.1.0        hb9d3cd8_3            conda-forge
  libcblas                   3.9.0        32_he106b2a_openblas  conda-forge
  libcrc32c                  1.1.2        h9c3ff4c_0            conda-forge
  libdeflate                 1.24         h86f0d12_0            conda-forge
  libexpat                   2.7.0        h5888daf_0            conda-forge
  libffi                     3.4.6        h2dba641_1            conda-forge
  libfreetype                2.13.3       ha770c72_1            conda-forge
  libfreetype6               2.13.3       h48d6fc4_1            conda-forge
  libgcc                     15.1.0       h767d61c_3            conda-forge
  libgcc-ng                  15.1.0       h69a702a_3            conda-forge
  libgfortran                15.1.0       h69a702a_3            conda-forge
  libgfortran5               15.1.0       hcea5267_3            conda-forge
  libgomp                    15.1.0       h767d61c_3            conda-forge
  libgrpc                    1.71.0       h8e591d7_1            conda-forge
  libjpeg-turbo              3.1.0        hb9d3cd8_0            conda-forge
  liblapack                  3.9.0        32_h7ac8fdf_openblas  conda-forge
  liblapacke                 3.9.0        32_he2f377e_openblas  conda-forge
  liblzma                    5.8.1        hb9d3cd8_2            conda-forge
  libnsl                     2.0.1        hb9d3cd8_1            conda-forge
  libopenblas                0.3.30       pthreads_h94d23a6_0   conda-forge
  libpng                     1.6.49       h943b412_0            conda-forge
  libprotobuf                5.29.3       h501fc15_1            conda-forge
  libre2-11                  2025.06.26   hba17884_0            conda-forge
  libsodium                  1.0.20       h4ab18f5_0            conda-forge
  libsqlite                  3.50.2       h6cd9bfd_0            conda-forge
  libstdcxx                  15.1.0       h8f9b012_3            conda-forge
  libstdcxx-ng               15.1.0       h4852527_3            conda-forge
  libtiff                    4.7.0        hf01ce69_5            conda-forge
  libuuid                    2.38.1       h0b41bf4_0            conda-forge
  libwebp-base               1.5.0        h851e524_0            conda-forge
  libxcb                     1.17.0       h8a09558_0            conda-forge
  libxcrypt                  4.4.36       hd590300_1            conda-forge
  libzlib                    1.3.1        hb9d3cd8_2            conda-forge
  logmuse                    0.2.8        pyhd8ed1ab_1          conda-forge
  markdown-it-py             3.0.0        pyhd8ed1ab_1          conda-forge
  markupsafe                 3.0.2        py311h2dc5d0c_1       conda-forge
  matplotlib-base            3.10.3       py311h2b939e6_0       conda-forge
  mdurl                      0.1.2        pyhd8ed1ab_1          conda-forge
  multidict                  6.6.3        py311h2dc5d0c_0       conda-forge
  mummer                     3.23         pl5321h503566f_21     bioconda   
  munkres                    1.1.4        pyhd8ed1ab_1          conda-forge
  nbformat                   5.10.4       pyhd8ed1ab_1          conda-forge
  ncurses                    6.5          h2d0b736_3            conda-forge
  networkx                   3.5          pyhe01879c_0          conda-forge
  numpy                      2.3.0        py311h519dc76_0       conda-forge
  oauth2client               4.1.3        pyhd8ed1ab_1          conda-forge
  openjpeg                   2.5.3        h5fbd93e_0            conda-forge
  openssl                    3.5.0        h7b32b05_1            conda-forge
  packaging                  25.0         pyh29332c3_1          conda-forge
  pandas                     2.3.0        py311h7db5c69_0       conda-forge
  paramiko                   3.5.1        pyhd8ed1ab_0          conda-forge
  pephubclient               0.4.4        pyhd8ed1ab_1          conda-forge
  peppy                      0.40.7       pyhd8ed1ab_2          conda-forge
  perl                       5.32.1       7_hd590300_perl5      conda-forge
  pillow                     11.2.1       py311h1322bbf_0       conda-forge
  pip                        25.1.1       pyh8b19718_0          conda-forge
  pkgutil-resolve-name       1.3.10       pyhd8ed1ab_2          conda-forge
  plac                       1.4.5        pyhd8ed1ab_0          conda-forge
  plasnet                    0.6.0        pyhdfd78af_1          bioconda   
  platformdirs               4.3.8        pyhe01879c_0          conda-forge
  pling                      2.0.1        pyhdfd78af_0          bioconda   
  pluggy                     1.6.0        pyhd8ed1ab_0          conda-forge
  ply                        3.11         pyhd8ed1ab_3          conda-forge
  prettytable                3.16.0       pyhd8ed1ab_0          conda-forge
  propcache                  0.3.1        py311h2dc5d0c_0       conda-forge
  proto-plus                 1.26.1       pyhd8ed1ab_0          conda-forge
  protobuf                   5.29.3       py311h3a6f5f3_0       conda-forge
  psutil                     7.0.0        py311h9ecbd09_0       conda-forge
  pthread-stubs              0.4          hb9d3cd8_1002         conda-forge
  pulp                       2.7.0        py311h38be061_1       conda-forge
  pyasn1                     0.6.1        pyhd8ed1ab_2          conda-forge
  pyasn1-modules             0.4.2        pyhd8ed1ab_0          conda-forge
  pycparser                  2.22         pyh29332c3_1          conda-forge
  pydantic                   2.11.7       pyh3cfb1c2_0          conda-forge
  pydantic-core              2.33.2       py311hdae7d1d_0       conda-forge
  pygments                   2.19.2       pyhd8ed1ab_0          conda-forge
  pynacl                     1.5.0        py311h9ecbd09_4       conda-forge
  pyopenssl                  25.1.0       pyhd8ed1ab_0          conda-forge
  pyparsing                  3.2.3        pyhd8ed1ab_1          conda-forge
  pysftp                     0.2.9        py_1                  conda-forge
  pysocks                    1.7.1        pyha55dd90_7          conda-forge
  pytest                     8.4.1        pyhd8ed1ab_0          conda-forge
  python                     3.11.13      h9e4cc4f_0_cpython    conda-forge
  python-dateutil            2.9.0.post0  pyhe01879c_2          conda-forge
  python-fastjsonschema      2.21.1       pyhd8ed1ab_0          conda-forge
  python-irodsclient         2.1.0        pyhd8ed1ab_0          conda-forge
  python-tzdata              2025.2       pyhd8ed1ab_0          conda-forge
  python_abi                 3.11         7_cp311               conda-forge
  pytz                       2025.2       pyhd8ed1ab_0          conda-forge
  pyu2f                      0.1.5        pyhd8ed1ab_1          conda-forge
  pyyaml                     6.0.2        py311h2dc5d0c_2       conda-forge
  qhull                      2020.2       h434a139_5            conda-forge
  re2                        2025.06.26   h9925aae_0            conda-forge
  readline                   8.2          h8c095d6_2            conda-forge
  referencing                0.36.2       pyh29332c3_0          conda-forge
  requests                   2.32.4       pyhd8ed1ab_0          conda-forge
  reretry                    0.11.8       pyhd8ed1ab_1          conda-forge
  rich                       14.0.0       pyh29332c3_0          conda-forge
  rpds-py                    0.25.1       py311hdae7d1d_0       conda-forge
  rsa                        4.9.1        pyhd8ed1ab_0          conda-forge
  s3transfer                 0.13.0       pyhd8ed1ab_0          conda-forge
  scipy                      1.16.0       py311h2d3ef60_0       conda-forge
  screed                     1.1.3        pyhd8ed1ab_0          conda-forge
  setuptools                 80.9.0       pyhff2d567_0          conda-forge
  setuptools-scm             8.3.1        pyhd8ed1ab_0          conda-forge
  shellingham                1.5.4        pyhd8ed1ab_1          conda-forge
  six                        1.17.0       pyhd8ed1ab_0          conda-forge
  slacker                    0.14.0       pyhd8ed1ab_1          conda-forge
  smart_open                 7.1.0        pyhd8ed1ab_0          conda-forge
  smmap                      5.0.2        pyhd8ed1ab_0          conda-forge
  snakemake                  7.32.4       hdfd78af_1            bioconda   
  snakemake-minimal          7.32.4       pyhdfd78af_1          bioconda   
  sortedcontainers           2.4.0        pyhd8ed1ab_1          conda-forge
  sourmash                   4.9.3        hdfd78af_0            bioconda   
  sourmash-minimal           4.9.3        py311h3800737_0       conda-forge
  stone                      3.3.2        pyhd8ed1ab_0          conda-forge
  stopit                     1.1.2        pyhd8ed1ab_1          conda-forge
  tabulate                   0.9.0        pyhd8ed1ab_2          conda-forge
  throttler                  1.2.2        pyhd8ed1ab_0          conda-forge
  tk                         8.6.13       noxft_hd72426e_102    conda-forge
  tomli                      2.2.1        pyhd8ed1ab_1          conda-forge
  toposort                   1.10         pyhd8ed1ab_1          conda-forge
  traitlets                  5.14.3       pyhd8ed1ab_1          conda-forge
  typer                      0.16.0       pyh167b9f4_0          conda-forge
  typer-slim                 0.16.0       pyhe01879c_0          conda-forge
  typer-slim-standard        0.16.0       hf964461_0            conda-forge
  typing-extensions          4.14.0       h32cad80_0            conda-forge
  typing-inspection          0.4.1        pyhd8ed1ab_0          conda-forge
  typing_extensions          4.14.0       pyhe01879c_0          conda-forge
  tzdata                     2025b        h78e105d_0            conda-forge
  ubiquerg                   0.8.0        pyhd8ed1ab_0          conda-forge
  unicodedata2               16.0.0       py311h9ecbd09_0       conda-forge
  uritemplate                4.2.0        pyhd8ed1ab_0          conda-forge
  urllib3                    2.5.0        pyhd8ed1ab_0          conda-forge
  veracitools                0.1.3        py_0                  conda-forge
  wcwidth                    0.2.13       pyhd8ed1ab_1          conda-forge
  wheel                      0.45.1       pyhd8ed1ab_1          conda-forge
  wrapt                      1.17.2       py311h9ecbd09_0       conda-forge
  xorg-libxau                1.0.12       hb9d3cd8_0            conda-forge
  xorg-libxdmcp              1.1.5        hb9d3cd8_0            conda-forge
  yaml                       0.2.5        h7f98852_2            conda-forge
  yarl                       1.20.1       py311h2dc5d0c_0       conda-forge
  yte                        1.8.1        pyha770c72_0          conda-forge
  zipp                       3.23.0       pyhd8ed1ab_0          conda-forge
  zstandard                  0.23.0       py311h9ecbd09_2       conda-forge
  zstd                       1.5.7        hb8e6e7a_2            conda-forge
```
</details>


Basic information on how to use this tool:
- executable: `pling`
- help: `-h`, `--help`
- version: `--version`
- description: 
>Pling is a software workflow for plasmid analysis using rearrangement distances, specifically the Double Cut and Join Indel (DCJ-Indel) distance. By intelligently combining containment distance (shared content as fraction of the smaller) and DCJ-indel distance (“how far apart evolutionarily” in a structural sense), and by preventing shared mobile elements from clouding the issue, it infers clusters of related plasmids.

Additional information:

Frolova, D., Lima, L., Roberts, L. W., Bohnenkämper, L., Wittler, R., Stoye, J., & Iqbal, Z. (2024). Applying rearrangement distances to enable plasmid epidemiology with pling. Microbial Genomics, 10(10). https://doi.org/10.1099/mgen.0.001300
‌

Full documentation: https://pling.readthedocs.io/latest/

## Example Usage

```bash
# input is a text file of a list of paths to fasta files
pling input.txt output_dir align
```
